ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Invoice_Line__c/EU_Open_Invoice_Line__c.object-meta.xml
<CustomObject>
    <label>Invoice Line</label>
    <nameField>
        <displayFormat>OIL-{YYYY}-{0000000}</displayFormat>
        <label>Open Invoice Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>