ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Invoice_Line__c/fields/EU_Amount_Due_Value__c.field-meta.xml
<CustomField>
    <fullName>EU_Amount_Due_Value__c</fullName>
    <label>Amount Due Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>