ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Invoice_Line__c/fields/EU_Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>EU_Days_Past_Due__c</fullName>
    <label># Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>