ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Invoice_Line__c/fields/EU_Header_JDE_Customer_No__c.field-meta.xml
<CustomField>
    <fullName>EU_Header_JDE_Customer_No__c</fullName>
    <label>JDE Customer No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>