ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Invoice_Line__c/fields/EU_Header_Order_number_Reference__c.field-meta.xml
<CustomField>
    <fullName>EU_Header_Order_number_Reference__c</fullName>
    <label>Order number Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>