ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Invoice_Line__c/fields/EU_Header_Terms_code__c.field-meta.xml
<CustomField>
    <fullName>EU_Header_Terms_code__c</fullName>
    <label>Terms code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>