ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Invoice_Line__c/fields/EU_Header_Terms_Description__c.field-meta.xml
<CustomField>
    <fullName>EU_Header_Terms_Description__c</fullName>
    <label>Terms Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>