ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Invoice_Line__c/fields/EU_Invoice_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>EU_Invoice_Line_Number__c</fullName>
    <externalId>true</externalId>
    <label>Invoice Line Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>