ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Invoice_Line__c/fields/EU_Open_Invoice__c.field-meta.xml
<CustomField>
    <fullName>EU_Open_Invoice__c</fullName>
    <label>Open Invoice</label>
    <referenceTo>EU_Open_Invoice__c</referenceTo>
    <relationshipName>Open_Invoice_Lines</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>