ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Open_Invoice_Line__c/fields/EU_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>EU_Order_Number__c</fullName>
    <label>Order Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>